--- a/src/container/footer/footer.css
+++ b/src/container/footer/footer.css
@@ -1,5 +1,9 @@
 .lottery-footer {
     height: 0.87rem;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
     background: #404040;
 }
 .lottery-footer-ul {
@@ -11,17 +15,24 @@
     clear: both;
 }
 .lottery-footer-ul li {
+    position: relative;
     width: 25%;
     float: left;
 }
-.lottery-footer-img {
-    height: 0.35rem;
-    padding-top: 0.15rem;
+.lottery-footer-img img {
+    height: 0.4rem;
+    width: 0.4rem;
+    position: absolute;
+    left: 50%;
+    margin-left: -0.2rem;
+    top: 0.15rem;
 }
+
 .lottery-footer-text {
     height: 0.36rem;
     font-size: 0.18rem;
     line-height: 0.36rem;
+    margin-top: 0.55rem;
     text-align: center;
     color: #929292;
 }
