--- a/src/container/footer/footer.css
+++ b/src/container/footer/footer.css
@@ -6,6 +6,9 @@
     bottom: 0;
     background: #404040;
 }
+.lottery-footer-div {
+    height: 0.87rem;
+}
 .lottery-footer-ul {
     width: 100%;
 }
