--- a/src/css/mine.css
+++ b/src/css/mine.css
@@ -32,88 +32,106 @@
 .mine-title {
     width: 100%;
     height: 1rem;
-    border-bottom: 1px solid #b9afaf;
+    border-top: 1px solid #e2e2e2;
+    border-bottom: 1px solid #e2e2e2;
     text-align: center; 
-    padding: 0.3rem 0;
+    padding: 0.16rem 0;
     background: #fff;
 }
 .mine-title-name {
-    font-size: 0.26rem;
+    font-size: 0.18rem;
     font-weight: 300;
-    line-height: 0.4rem;
+    line-height: 0.5rem;
 }
 .mine-title-money {
-    font-size: 0.46rem;
-    line-height: 0.6rem;
+    font-size: 0.34rem;
+    line-height: 0.58rem;
     font-weight: 500;
     color: #e0ee22;
 }
 .mine-input {
-    width: 86%;
+    width: calc( 100% - 0.76rem );
     margin: 0 auto;
     display: block;
-    height: 0.5rem;
-    border: 1px solid #b9afaf;
-    border-radius: 2px;
-    font-size: 0.25rem;
-    padding: 0.15rem 0.3rem;
-    color: #b9afaf;
+    height: 0.3rem;
+    border: 1px solid #a2a2a2;
+    border-radius: 3px !important;
+    font-size: 0.23rem;
+    padding: 0.2rem;
+    color: #a4a4a4;
+    margin: 0 0.18rem;
 }
 .mine-input-text {
-    height: .8rem;
-    font-size: .23rem;
-    line-height: 0.8rem;
-    padding-left: 0.33rem;
+    height: 0.74rem;
+    width: calc( 100% - 0.76rem );
+    margin: 0 0.18rem;
+    font-size: 0.2rem;
+    line-height: 0.74rem;
     font-weight: 500;
+    color: #090909;
 }
 .mine-input-button {
-    width: 94%;
-    height: 1rem;
-    background: #e0ee22;
+    width: calc( 100% - 0.2rem );
+    height: 0.7rem;
+    background: #f9cf3d;
     border: 0;
-    font-size: 0.28rem;
-    margin: 0.35rem auto 0.15rem;
-    border-radius: 2px;
+    font-size: 0.2rem;
+    line-height: 0.7rem;
+    margin: 0.2rem auto 0.15rem;
+    border-radius: 4px;
     display: block;
 }
 .mine-content {
     background: #f7f7f7;
 }
 .mine-input-box {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.41rem;
 }
 .mine-content-ul {
-    border: 1px solid #b9afaf;
+    border: 1px solid #e2e2e2;
     border-left:0;
     border-right: 0;
-    margin-top: 0.35rem;
+    margin-top: 0.34rem;
     background: #fff;
+    color: #0a0a0a;
 }
-.mine-content-ul li {
+.mine-content-ul .ul-text {
+    width: calc( 100% - 0.28rem );
     list-style: none;
-    line-height: 0.85rem;
-    font-size: 0.28rem;
+    margin-left: 0.28rem;
+    border-bottom: 1px solid #b9afaf;
+    position: relative;
+    height: 0.76rem;
+    font-size: 0.21rem;
     font-weight: 500;
 }
-.mine-content li .ul-icon {
-    width: 0.7rem;
-    display: inline-block;
+.mine-content-ul .last {
+    border-bottom: 0; 
 }
-.mine-content li .ul-text {
-    display: inline-block;
-    width: calc( 100% - 1.4rem );
-    border-bottom: 1px solid #b9afaf;
+.mine-content .ul-text .ul-icon {
+    width: 0.36rem;
+    height: 0.36rem;
+    position: absolute;
+    top: 0.2rem;
+    left: -0.08rem;
 }
-.mine-content li .ul-to {
-    width: 0.7rem;
-    display: inline-block;
-    border-bottom: 1px solid #b9afaf;
+.mine-content .ul-text span {
+    margin-left: 0.4rem;
+    line-height: 0.76rem;
+}
+
+.mine-content .ul-text .ul-to {
+    width: 0.14rem;
+    height: 0.14rem;
+    position: absolute;
+    top: 0.31rem;
+    right: 0.31rem;
 }
 .mine-button {
     width: 100%;
-    height: 1rem;
-    background: #e0ee22;
+    height: 0.75rem;
+    background: #fbce3f;
     border: 0;
-    font-size: 0.28rem;
+    font-size: 0.2rem;
     margin: 0.35rem 0 0.15rem;
 }
