mine AccountRecharge AgentManage

--- a/src/container/header/header.css
+++ b/src/container/header/header.css
@@ -1,6 +1,7 @@
 .lottery-header,.lottery-header-back  {
     height: 0.8rem;
     position: relative;
+    border-bottom: 1px solid #dcdcdc;
 }
 .lottery-header div,.lottery-header-back div {
     height: 100%;
