--- a/src/css/home.css
+++ b/src/css/home.css
@@ -6,8 +6,11 @@
     display: block;
 }
 .home-hall-bg {
+    display: block;
     width: 100%;
     height: 2.4rem;
+    background: url(../img/hall-header.png) 0 0 no-repeat;
+    background-size: 100% 2.4rem;
 }
 .hall-content .home-hall-now {
     height: 1.44rem;
