--- a/src/css/global.css
+++ b/src/css/global.css
@@ -31,11 +31,15 @@ form {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     color: #404040;
 }
+html {
+    height: 100%;
+}
 body {
     background-color: #fff;
     -webkit-text-size-adjust: 100%;
     min-width: 320px;
     font: 0.13rem/2em sans-serif;
+    height: 100%;
 }
 em,
 i {
@@ -79,4 +83,7 @@ select {
 }
 a {
     text-decoration: none;
+}
+div {
+    height: 100%;
 }
