--- a/src/css/home.css
+++ b/src/css/home.css
@@ -20,7 +20,7 @@
     background: #ffffff;
 }
 .hall-content .home-hall-now .left {
-    width: calc( 60% - 0.54rem );
+    width: calc( 75% - 0.54rem );
     border-right: 1px solid #efefef;
     height: 0.92rem;
     padding: 0.26rem;
@@ -42,7 +42,7 @@
     margin-left: 0.2rem;
 }
 .hall-content .home-hall-now .right {
-    width: calc( 40% - 0.52rem );
+    width: calc( 25% - 0.52rem );
     height: 0.92rem;
     padding: 0.26rem;
     float: left;
@@ -89,6 +89,8 @@
     position: relative;
     float: left;
     border-bottom: 1px solid #f0f0f0;
+    border-right: 1px solid #f0f0f0;
+    margin-right: -1px;
 }
 .hall-content .hall-mine-ticket-img li img {
     width: 0.88rem;
@@ -102,17 +104,19 @@
     color: #626262;
     text-align: center;
     height: 100%;
-    font-size: 0.22rem;
+    font-size: 0.26rem;
     margin-left: 1.16rem;
 }
 .hall-content .hall-mine-ticket-img li .tickect-close-name {
-    height: 100%;
+    height: auto;
     margin-left: 1.16rem;
     margin-top: 0.18rem;
 }
 .hall-content .hall-mine-ticket-img li .tickect-close-name .tickect-name-title{
-    font-size: 0.23rem;
-    color: #616161;
+    font-size: 0.28rem;
+    height: 0.5rem;
+    line-height: 0.5rem;
+    color: #666;
 }
 .hall-content .hall-mine-ticket-img li .tickect-close-name .tickect-name-text{
     font-size: 0.18rem;
@@ -137,9 +141,9 @@
     width: 0.26rem;
     right: 0.1rem;
     bottom: 0.4rem;
-    font-size: 0.12rem;
-    color: #000;
-    background: #fdca3b;
+    font-size: 0.24rem;
+    color: #555;
+    background: #face3d;
     border-radius: 10px;
     line-height: 0.44rem;
     text-align: center;
