--- a/src/css/notice.css
+++ b/src/css/notice.css
@@ -25,8 +25,9 @@
     height: 1.08rem;
     width: 100%;
     position: relative; 
-    padding-top: 0.5rem;
+    padding: 0.2rem 0;
     border-bottom: 1px solid #dcdcdc;
+    margin-bottom: 0.3rem;
 }
 .notice-content .notice-content-ul li img {
     width: 0.24rem;
@@ -36,16 +37,14 @@
     right: 0.2rem;
 }
 .notice-content .notice-content-ul li .message {
-    height: 0.32rem;
-    line-height: 0.32rem;
-    font-size: 0.2rem;
+    height: auto;
+    line-height: 0.6rem;
+    font-size: 0.26rem;
     color: #030303;
-    margin-bottom: 0.12rem;
 }
-.notice-content .notice-content-ul li .message .message-name {
-    padding: 0 0.06rem;
-    margin-right: 0.08rem;
+.notice-content .notice-content-ul li .message span {
+    margin-right: 10px;
 }
-.notice-content .notice-content-ul li .message .message-num {
-    padding: 0 0.04rem;
+.notice-content .notice-content-ul li .msg {
+    
 }
